ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /task
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /task
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 80


---
apiVersion: v1
kind: Service
metadata:
 name: taskapi
 annotations:
   konghq.com/plugins: twelve-per-min
spec:
 type: NodePort
 selector:
   app: taskapi
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
 name: taskprocessoritem
 annotations:
   konghq.com/plugins: twelve-per-min
spec:
 type: NodePort
 selector:
   app: taskprocessoritem
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30002
